Trabajando en action_tours versión inglés hecha

--- a/tours.html
+++ b/tours.html
@@ -319,6 +319,7 @@
                 </div>
             </div>
         </div>
+        <!------------------------------------------->
         <div class="container">
             <div class="row">
                 <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
@@ -415,7 +416,7 @@
                 <hr>
                 <div class="col-12">
                     <div class="row justify-content-md-center text-center">
-                        <p>Nota: Al momento de reservar algún tour se le solicitará una tarjeta de crédito como garantía</p>
+                        <p style="padding: 20px;">Nota: Al momento de reservar algún tour se le solicitará una tarjeta de crédito como garantía</p>
                     </div>
                 </div>
             </div>
@@ -427,14 +428,17 @@
                 <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5520682719&text&app_absent=0" target="_blank" class=""><i class="fa-brands fa-whatsapp"></i></a>
             </div>-->
-            <div class="row justify-content-md-center">
+            <div class="row justify-content-center" style="margin-bottom: 30px;">
                 <h1>Contacto Tours</h1>
             </div>
-            <div class="row justify-content-md-center">
-                <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a href="mailto:recepcion@hotelespuntomx.com?Subject=Solicitud%20de%20tour%20HotelPuntoMX%20" type="button" class="btn btn-primary" style="font-size: 2rem; color:#fff;">Enviar Email</a>
+            <!--<div class="row justify-content-md-center">-->
+            <div class="row justify-content-center align-content-center pb-3">
+                <div class="col-lg-5 col-md-4 col-sm-4 justify-content-center align-content-center" style="text-align: center; align-items: center; background-color: #00a8ab; color: #fff;"> <!--00a8ab-->
+                    <a href="mailto:recepcion@hotelespuntomx.com?Subject=Solicitud%20de%20tour%20HotelPuntoMX%20" type="button" class="btn btn-primary" style="font-size: 2rem; background-color: #00a8ab!important; color:#fff; border: none;">Enviar Email</a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-12" style="text-align: center; align-items: center; background-color: #25D366; color: #fff;">
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-md-4 col-sm-4" style="text-align: center; align-items: center; background-color: #25D366; color: #fff;">
                     <a href="https://api.whatsapp.com/send/?phone=525520682719&text&app_absent=0" target="_blank" class="" style="color: #FFF; align-content: center; text-align: center;"><i class="fa-brands fa-whatsapp fa-4x"></i></a>
                 </div>
             </div>
