--- a/ng/tours.html
+++ b/ng/tours.html
@@ -317,6 +317,133 @@
         <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </div>
+    <!------------------------------------------->
+    <div class="container">
+      <div class="row">
+        <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
+        <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
+      </div>
+    </div>
+    <!------------------------------------------->
+    <!------------------------------------------->
+    <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse; padding-top: 1.5rem!important; padding-bottom: 0.5rem!important;">
+      <div class="row">
+        <div class="col-md-6">
+          <form class="contact_form" id="contactForm2">
+            <ul>
+              <li>
+                <h2 class="cursiveFont fontHover">Personal Information:</h2>
+                <!--<span class="required_notification">* Denotes Required Field</span>-->
+              </li>
+              <li>
+                <label for="name_tour" class="cursiveFont">Name:</label>
+                <input type="text" name="name" class="borde_r" placeholder="Full Name" id="name_tour" required />
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <label for="phone_tour" class="cursiveFont">Phone number:</label>
+                <input type="number" name="phone" class="borde_r" placeholder="Phone number" id="phone_tour" required />
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <label for="email_tour" class="cursiveFont">Email:</label>
+                <input type="email" name="email" placeholder="email@example.com" id="email_tour" required />
+                <!--<span class="fa valid-icon"></span>-->
+                <span class="form_hint">Format "email@domino.com"</span>
+              </li>
+              <li>
+                <label for="date_tour" class="cursiveFont" style="font-size: 1.5rem;">Arrival date:</label>
+                <input type="date" name="date" placeholder="dd/mm/yyyy" id="date_tour" required />
+                <!--<span class="fa valid-icon"></span>-->
+                <br>
+                <!--<span id="response-mail" class="fontHover cursiveFont"> </span>-->
+              </li>
+              <li>
+                <label for="people_tour" class="cursiveFont" style="font-size: 1.5rem;">Number of people:</label>
+                <input type="number" name="people" class="borde_r" placeholder="# of people" id="people_tour" step="1" required />
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <!--<input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>-->
+              </li>
+            </ul>
+          </form>
+        </div>
+        <div class="col-md-6">
+          <form class="contact_form" id="contactForm3">
+            <ul>
+              <li>
+                <h2 class="cursiveFont fontHover">Service Information:</h2>
+                <!--<span class="required_notification">* Denotes Required Field</span>-->
+              </li>
+              <li>
+                <label for="tour_tour" class="cursiveFont">Tour:</label>
+                <!--<input type="text" name="tour" class="borde_r" placeholder="Nombre" id="tour_tour" required />-->
+                <select name="tour" class="borde_r" id="tour_tour" required>
+                  <option value="Piramides de Teotihuacán">Pyramids of Teotihuacán</option>
+                  <option value="Teotihuacán aéreo">Teotihuacan from the skies</option>
+                  <option value="Teotihuacán Express">Teotihuacan Express</option>
+                  <option value="Xochimilco-Coyoacán">Xochimilco-Coyoacán</option>
+                  <option value="Cholula-Puebla">Cholula and Puebla</option>
+                  <option value="Taxco-Cuernavaca">Taxco and Cuernavaca</option>
+                  <option value="Garibaldi Nocturno">Garibaldi night tour</option>
+                  <option value="Tour Luchas">Luchas Tour</option>
+                  <option value="Piramides y Safari">Pyramids and safari</option>
+                  <option value="Grutas de Tolantongo">Tolantongo Caves</option>
+                </select>
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <label for="day_tour" class="cursiveFont" style="font-size: 1.3rem;">What day does the tour require?:</label>
+                <input type="date" name="day" class="borde_r" placeholder="dd/mm/yyyy" id="day_tour" required />
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <label for="request_tour" class="cursiveFont">Special requests:</label>
+                <textarea name="request" cols="30" rows="4" required id="request_tour"></textarea>
+                <!--<span class="fa valid-icon"></span>-->
+                <br>
+                <span id="response-mail" class="fontHover cursiveFont"> </span>
+              </li>
+              <li>
+                <input class="btn btn-primary btn-luxe-primary" type="button" value="Send" onclick="enviarTours()" style="height: 40px; width: 90px; font-size: 1.3rem; text-align: center; padding: 0;  box-shadow: none; margin: auto;"/>
+              </li>
+            </ul>
+          </form>
+        </div>
+        <hr>
+        <div class="col-12">
+          <div class="row justify-content-md-center text-center">
+            <p style="padding: 20px;">At the time of booking a tour you will be asked to provide a credit card as a guarantee.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <div class="container">
+      <!--<div class="row">
+          5520682719recepcion@hotelespuntomx.com
+          <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="">Reserva aquí</a>
+          <a href="https://api.whatsapp.com/send/?phone=5520682719&text&app_absent=0" target="_blank" class=""><i class="fa-brands fa-whatsapp"></i></a>
+      </div>-->
+      <div class="row justify-content-center" style="margin-bottom: 30px;">
+        <h1>Contact Tours</h1>
+      </div>
+      <!--<div class="row justify-content-md-center">-->
+      <div class="row justify-content-center align-content-center pb-3">
+        <div class="col-lg-5 col-md-4 col-sm-4 justify-content-center align-content-center" style="text-align: center; align-items: center; background-color: #00a8ab; color: #fff;"> <!--00a8ab-->
+          <a href="mailto:recepcion@hotelespuntomx.com?Subject=Solicitud%20de%20tour%20HotelPuntoMX%20" type="button" class="btn btn-primary" style="font-size: 2rem; background-color: #00a8ab!important; color:#fff; border: none;">Send mail</a>
+        </div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-5 col-md-4 col-sm-4" style="text-align: center; align-items: center; background-color: #25D366; color: #fff;">
+          <a href="https://api.whatsapp.com/send/?phone=525520682719&text&app_absent=0" target="_blank" class="" style="color: #FFF; align-content: center; text-align: center;"><i class="fa-brands fa-whatsapp fa-4x"></i></a>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <!------------------------------------------->
+    <!------------------------------------------->
     <footer id="footer" class="fh5co-bg-color">
       <div class="container">
         <div class="row">
