--- a/ng/tours.html
+++ b/ng/tours.html
@@ -41,14 +41,20 @@
     }
     @media screen and (max-width: 990px) {
       .window_size{
-        height: 70vh!important;
+        height: 95vh!important;
       }
     }
-    @media screen and (max-width: 658px) {
+    @media screen and (max-width: 758px) {
       .window_size{
-        height: 65vh!important;
+        height: 85vh!important;
       }
     }
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+    input[type=number] { -moz-appearance:textfield; }
   </style>
 </head>
 <body class="mybody">
