Test MDP Class Eng Ver.

--- a/ng/tours.html
+++ b/ng/tours.html
@@ -55,6 +55,10 @@
       margin: 0;
     }
     input[type=number] { -moz-appearance:textfield; }
+    .mdp_img{
+      max-height: 50%!important;
+      width: 80%;
+    }
   </style>
 </head>
 <body class="mybody">
