Test MDP Class Eng Ver.

--- a/ng/tours.html
+++ b/ng/tours.html
@@ -263,7 +263,7 @@
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
-          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="padding-top: 50px;">
+          <div id="carouselExampleIndicators" class="carousel slide mx-auto" data-ride="carousel" style="padding-top: 50px; max-width: 90%!important;">
             <ol class="carousel-indicators">
               <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
               <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -279,34 +279,34 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="../images/tours/eng/tour_uno.png" alt="First slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_uno.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_dos.png" alt="Second slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_dos.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_tres.png" alt="Third slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_tres.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_cuatro.png" alt="Second slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_cuatro.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_cinco.png" alt="Third slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_cinco.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_seis.png" alt="Second slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_seis.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_siete.png" alt="Third slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_siete.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_ocho.png" alt="Third slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_ocho.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_nueve.png" alt="Second slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_nueve.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="../images/tours/eng/tour_diez.png" alt="Third slide">
+                <img class="d-block mx-auto mdp_img" src="../images/tours/eng/tour_diez.png" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
