--- a/tours.html
+++ b/tours.html
@@ -62,6 +62,10 @@
             max-height: 50%!important;
             width: 80%;
         }
+        .contact_form input{
+            padding-right: 5px!important;
+        }
+
     </style>
 </head>
 <body class="mybody">
