--- a/ng/tours.html
+++ b/ng/tours.html
@@ -59,6 +59,9 @@
       max-height: 50%!important;
       width: 80%;
     }
+    .contact_form input{
+      padding-right: 5px!important;
+    }
   </style>
 </head>
 <body class="mybody">
