--- a/tours.html
+++ b/tours.html
@@ -52,6 +52,12 @@
                 padding-left: 20px!important;
             }
         }
+
+        @media screen and (max-width: 990px) {
+            .window_size{
+                height: 50vh!important;
+            }
+        }
         input[type=number]::-webkit-inner-spin-button,
         input[type=number]::-webkit-outer-spin-button {
             -webkit-appearance: none;
