--- a/ng/tours.html
+++ b/ng/tours.html
@@ -49,6 +49,11 @@
         height: 85vh!important;
       }
     }
+    @media screen and (max-width: 450px) {
+      .window_size{
+        height: 50vh!important;
+      }
+    }
     input[type=number]::-webkit-inner-spin-button,
     input[type=number]::-webkit-outer-spin-button {
       -webkit-appearance: none;
