--- a/services.html
+++ b/services.html
@@ -350,25 +350,32 @@
         <div id="fh5co-blog-section" style="padding-top:2rem;">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="blog-grid" style="background-image: url(./assets/webp/AUGACHILE.jpeg);">
                         </div>
                         <div class="desc" style="text-align: center;">
                             <h3 style="font-size: 1.6rem;"><a href="restaurant.html">Vive el sabor de la CDMX en nuestro Restaurante MX</a></h3>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="blog-grid" style="background-image: url(./assets/webp/AMENIDADES_2.jpeg);">
                         </div>
                         <div class="desc" style="text-align: center;">
                             <h3 style="font-size: 1.6rem;"><a href="cafe.html">Deja que tus sentidos sean tocados en nuestro Café MX</a></h3>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="blog-grid" style="background-image: url(./assets/webp/DELUXE_2_CAMAS_5.jpeg);">
                         </div>
                         <div class="desc" style="text-align: center;">
                             <h3 style="font-size: 1.6rem;"><a href="roomservice.html">Disfruta de la comodidad de tu estancia gracias a nuestro <i>Room Service</i></a></h3>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="blog-grid" style="background-image: url(./assets/webp/EJECUTIVA.jpeg);">
+                        </div>
+                        <div class="desc" style="text-align: center;">
+                            <h3 style="font-size: 1.6rem;"><a href="#">Cónoce los paquetes que tenemos para ti</a></h3>
                         </div>
                     </div>
                 </div>
