Corrigiendo precios paquetes

--- a/tours.html
+++ b/tours.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Room Service - Hotel PUNTO MX</title>
+    <title>Tours - Hotel PUNTO MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Website Hoteles PUNTO MX" />
     <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
