Corrigiendo precios paquetes

--- a/paquetes.html
+++ b/paquetes.html
@@ -508,7 +508,7 @@
 <script>
   const date_t = document.getElementById('date_tour');
   date_t.min = new Date().toISOString().split("T")[0];
-  function enviarTours(){
+  function enviarPaquete(){
     (function(){
       emailjs.init("7y55EjOorzlD_0m9_");
     })();
