Corrigiendo precios paquetes

--- a/paquetes.html
+++ b/paquetes.html
@@ -510,7 +510,7 @@
   date_t.min = new Date().toISOString().split("T")[0];
   function enviarPaquete(){
     (function(){
-      emailjs.init("7y55EjOorzlD_0m9_");
+      emailjs.init("OeAfkrrjyAmbxW6pj");
     })();
     let name = document.getElementById("name_tour").value;
     let email = document.getElementById("email_tour").value;
