Corrigiendo precios paquetes

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
           </div>
 --->
 <!-- Modal -->
-<div class="modal fade" id="modalNov" tabindex="-1" aria-labelledby="modalLabelNov" aria-hidden="true">
+<div class="modal fade" id="modalProm" tabindex="-1" aria-labelledby="modalLabelProm" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <!--
@@ -271,7 +271,7 @@
       </div>
       -->
       <div class="modal-body">
-        <!--<img src="./assets/proms/nov/Img_Mundial.jpeg" class="img-fluid" alt="Promoción Mundial QATAR">-->
+        <img src="https://i.ibb.co/ngVf13k/terraza-HPMx.jpg" class="img-fluid" alt="Terrazas, Terraza Hotel Punto MX">
       </div>
     </div>
   </div>
@@ -917,7 +917,7 @@
 <script src="js/custom.js"></script>
 <script>
   $(document).ready(function() {
-    /*$('#modalNov').modal('show');*/
+    $('#modalProm').modal('show');
   });
   const slider = document.querySelector('.gallery');
   let isDown = false;
