--- a/index.html
+++ b/index.html
@@ -246,6 +246,17 @@
   </div>
 </div>
 <!------------>
+<!-- Modal -->
+<div class="modal fade" id="modalHeart" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body">
+        Content
+      </div>
+    </div>
+  </div>
+</div>
+<!------------>
 <div id="fh5co-wrapper">
   <div id="fh5co-page">
     <div id="fh5co-header">
@@ -373,7 +384,7 @@
       <div class="row">
         <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
         <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
-        <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
+        <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
       </div>
     </div>
     <!--
@@ -885,6 +896,7 @@
 <script src="js_t/jquery.singlePageNav.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/particles.js"></script>
 <script>
   $(document).ready(function() {
     $('#modalProm').modal('show');
@@ -916,6 +928,13 @@
     const walk = (x - startX) * SCROLL_SPEED;
     slider.scrollLeft = scrollLeft - walk;
   });
+  window.onload = function() {
+    Particles.init
+    ({
+      selector: '.myheart-flotante'
+    });
+  };
 </script>
+<script src="js/particles.js"></script>
 </body>
 </html>
