Promoción Febrero 14 - Modal apllied 2

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/t-style.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/carrusel_feb.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
   <!------------------------------------------------->
   <style>
@@ -251,7 +252,15 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        Content
+        <div class="carrito">
+          <button id="retroceder">Retroceder</button>
+          <div id="imash"></div>
+          <button id="avanzar">Avanzar</button>
+        </div>
+        <div class="controles">
+          <button id="play">Play</button>
+          <button id="stop" disabled>Stop</button>
+        </div>
       </div>
     </div>
   </div>
