Promoción Febrero 14 - JS added

--- a/index.html
+++ b/index.html
@@ -906,6 +906,7 @@
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/custom.js"></script>
 <script src="js/particles.js"></script>
+<script src="js/carFeb.js"></script>
 <script>
   $(document).ready(function() {
     $('#modalProm').modal('show');
