Promoción Febrero 14 - Bar

--- a/index.html
+++ b/index.html
@@ -68,6 +68,32 @@
       border-radius: 3px;
       font-size: 0;
     }
+
+    .carousel__container::-webkit-scrollbar:vertical {
+      width:5px;
+    }
+
+    .carousel__container::-webkit-scrollbar-button:increment,.contenedor::-webkit-scrollbar-button {
+      display: none;
+    }
+
+    .carousel__container::-webkit-scrollbar:horizontal {
+      height: 10px;
+    }
+
+    .carousel__container::-webkit-scrollbar-thumb {
+      background-color: var(--color-secundario)!important;
+      border-radius: 20px;
+      border: 2px solid rgba(0,0,0,0);
+    }
+    .carousel__container::-webkit-scrollbar-thumb {
+      background-color: var(--color-secundario)!important;
+      border-radius: 20px;
+      border: 2px solid rgba(0,0,0,0);
+    }
+    .carousel__container::-webkit-scrollbar-track {
+      border-radius: 10px;
+    }
   </style>
   <!------------------------------------------------->
   <!------------------------------------------------->
@@ -257,7 +283,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <section class="carousel">
+        <section class="carousel center-block align-items-center align-middle">
           <div class="carousel__container">
             <article class="carousel__slider carousel__slider--1">
               <video autoplay muted loop id="myVideo">
