--- a/index.html
+++ b/index.html
@@ -261,7 +261,11 @@
 <div class="modal fade" id="modalHeart" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body center-block align-items-center align-middle">
+        <video autoplay muted loop id="myVideo">
+          <source src="./images/february/vid.mp4" type="video/mp4">
+        </video>
+        <!--
         <section class="carousel center-block align-items-center align-middle">
           <div class="carousel__container">
             <article class="carousel__slider carousel__slider--1">
@@ -275,6 +279,7 @@
             </article>
           </div>
         </section>
+        -->
       </div>
     </div>
   </div>
