--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
     Particles.init({selector: '.myheart-flotante'});
   };
   $(document).ready(function() {
-    $('#modalProm').modal('show');
+    //$('#modalProm').modal('show');
   });
   const slider = document.querySelector('.gallery');
   let isDown = false;
