--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
   <!-- Stylesheets -->
   <!-- Dropdown Menu -->
   <link rel="stylesheet" href="css/superfish.css">
-  <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
-  <link rel="stylesheet" href="css/cs-select.css">
-  <link rel="stylesheet" href="css/cs-skin-border.css">
+  <!--<link rel="stylesheet" href="css/bootstrap-datepicker.min.css">-->
+  <!--<link rel="stylesheet" href="css/cs-select.css">
+  <link rel="stylesheet" href="css/cs-skin-border.css">-->
   <link rel="stylesheet" href="css/themify-icons.css">
   <link rel="stylesheet" href="css/flaticon.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/flexslider.css">
   <link rel="stylesheet" href="css/mybtn_flot.css">
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
+  <!--<link rel="stylesheet" type="text/css" href="css/datepicker.css"/>-->
   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/t-style.css">
