--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
   </div>
 </div>
 <!------------>
-<!-- Modal -->
+<!-- Modal especial event-->
 <div class="modal fade" id="modalProm" tabindex="-1" aria-labelledby="modalLabelProm" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body">
-        <img src="https://i.ibb.co/ngVf13k/terraza-HPMx.jpg" class="img-fluid" alt="Terrazas, Terraza Hotel Punto MX">
+        <img src="./images/promMay.jpg" class="img-fluid" alt="Mayo, día de las madres cdmx">
       </div>
     </div>
   </div>
@@ -930,7 +930,7 @@
     Particles.init({selector: '.myheart-flotante'});
   };
   $(document).ready(function() {
-    //$('#modalProm').modal('show');
+    $('#modalProm').modal('show');
   });
   const slider = document.querySelector('.gallery');
   let isDown = false;
