--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
 <script src="js/particles.js"></script>
 <script>
   window.onload = function() {
-    Particles.init({selector: '.myheart-flotante'});
+    /*Particles.init({selector: '.myheart-flotante'});*/
   };
   $(document).ready(function() {
     //$('#modalProm').modal('show');
