--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
+  <!------------------------------------------------->
   <title>Inicio | Hotel Punto MX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Website Hoteles PUNTO MX" />
