Trabajando Meta tags - Redes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!------------------------------------------------->
   <title>Inicio | Hotel Punto MX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Website Hoteles PUNTO MX" />
+  <meta name="description" content="Bienvenido a Hotel Punto MX. El punto más cómodo de México" />
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
   <meta name="author" content="eknr" />
   <!--Completado-->
