--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <!------------------------------------------------->
   <title>Inicio | Hotel Punto MX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Bienvenido a Hotel Punto MX. El punto más cómodo de México" />
+  <meta name="description" content="Website Hoteles PUNTO MX" />
+  <!--<meta name="description" content="El punto más cómodo de México" />-->
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
   <meta name="author" content="eknr" />
   <!--Completado-->
   <!-- Facebook and Twitter integration -->
+  <!--
   <meta property="og:title" content=""/>
   <meta property="og:image" content=""/>
   <meta property="og:url" content=""/>
@@ -23,6 +25,17 @@
   <meta name="twitter:title" content="" />
   <meta name="twitter:image" content="" />
   <meta name="twitter:url" content="" />
+  <meta name="twitter:card" content="" />-->
+  <!--------------------------------------->
+  <!-- Facebook and Twitter integration -->
+  <meta property="og:title" content="Hotel Punto MX"/>
+  <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
+  <meta property="og:url" content="https://hotelespuntomx.com/"/>
+  <meta property="og:site_name" content="Hoteles Punto MX"/>
+  <meta property="og:description" content="El punto más cómodo de México"/>
+  <meta name="twitter:title" content="Hotel Punto MX" />
+  <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
+  <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
