Trabajando Meta tags - Redes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="author" content="eknr" />
   <!--Completado-->
   <!-- Facebook and Twitter integration -->
-  <!--
+  
   <meta property="og:title" content=""/>
   <meta property="og:image" content=""/>
   <meta property="og:url" content=""/>
@@ -25,9 +25,11 @@
   <meta name="twitter:title" content="" />
   <meta name="twitter:image" content="" />
   <meta name="twitter:url" content="" />
-  <meta name="twitter:card" content="" />-->
+  <meta name="twitter:card" content="" />
+
   <!--------------------------------------->
   <!-- Facebook and Twitter integration -->
+  <!--
   <meta property="og:title" content="Hotel Punto MX"/>
   <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
   <meta property="og:url" content="https://hotelespuntomx.com/"/>
@@ -37,6 +39,8 @@
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
+  -->
+  <!------------------------------------------------->
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   <!------------------------------------------------->
