--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!----------------------Meta tags para recargar archivos de servidor sin Cache--------------------------->
+  <!--
   <meta http-equiv='cache-control' content='no-cache'>
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
+  -->
   <!------------------------------------------------->
   <title>Inicio | Hotel Punto MX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Website Hoteles PUNTO MX" />
-  <!--<meta name="description" content="El punto más cómodo de México" />-->
+  <meta name="description" content="Hoteles PUNTO MX" />
+  <meta name="description" content="El punto más cómodo de México" />
   <meta name="keywords" content="Hoteles, CDMX, PUNTOMX, TURISTA" />
   <meta name="author" content="eknr" />
   <!--Completado-->
   <!-- Facebook and Twitter integration -->
-  
+  <!--
   <meta property="og:title" content=""/>
   <meta property="og:image" content=""/>
   <meta property="og:url" content=""/>
@@ -26,10 +28,10 @@
   <meta name="twitter:image" content="" />
   <meta name="twitter:url" content="" />
   <meta name="twitter:card" content="" />
-
+  -->
   <!--------------------------------------->
   <!-- Facebook and Twitter integration -->
-  <!--
+
   <meta property="og:title" content="Hotel Punto MX"/>
   <meta property="og:image" content="https://hotelespuntomx.com/assets/webp/DELUXE_2_CAMAS_5.jpeg"/>
   <meta property="og:url" content="https://hotelespuntomx.com/"/>
@@ -39,7 +41,7 @@
   <meta name="twitter:image" content="https://hotelespuntomx.com/assets/webp/RECEPCION.jpeg" />
   <meta name="twitter:url" content="https://hotelespuntomx.com/" />
   <meta name="twitter:card" content="" />
-  -->
+
   <!------------------------------------------------->
   <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
