--- a/restaurant.html
+++ b/restaurant.html
@@ -361,6 +361,7 @@
                 <div class="carousel-item">
                   <img class="d-block w-100" src="./assets/proms/PromoSeptiembre_3.jpeg" alt="Promo Septiembre 3">
                 </div>-->
+                <!--
                 <div class="carousel-item active">
                   <img class="d-block w-100" src="./assets/proms/act2_oct22.jpeg" alt="Promo Septiembre 2">
                 </div>
@@ -378,7 +379,8 @@
                 </div>
                 <div class="carousel-item">
                   <img class="d-block w-100" src="./assets/proms/promo_jueves.jpeg" alt="Promo Septiembre 3">
-                </div>
+                </div>-->
+
               </div>
               <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
