--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/t-style.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/carrusel_feb.css">
+  <!--<link rel="stylesheet" href="css/carrusel_feb.css">-->
+  <link rel="stylesheet" href="css/slider.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
 
   <!------------------------------------------------->
@@ -272,6 +273,7 @@
 <!------------>
 <!-- Modal especial event-->
 <!-- Usar este fragmento de codigo para mostrar promociones del mes || Cambiar la imagen-->
+<!--
 <div class="modal fade" id="modalProm" tabindex="-1" aria-labelledby="modalLabelProm" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -281,13 +283,14 @@
     </div>
   </div>
 </div>
+-->
 <!------------>
 <!-- Modal especial event-->
 <!-- Usar este fragmento de codigo para mostrar promociones del mes || Cambiar la imagen-->
-<div class="modal fade" id="largeModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+<div class="modal fade" id="modalSep" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
   <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-body">
+    <div class="modal-content my-mod-c">
+      <div class="modal-body my-mod-b">
         <!-- carousel -->
         <div id='carouselExampleIndicators' class='carousel slide' data-ride='carousel'>
           <ol class='carousel-indicators'>
@@ -316,9 +319,10 @@
           </a>
         </div>
       </div>
+      <!--
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
@@ -974,8 +978,8 @@
 <!--<script src="js/jquery-2.1.4.min.js"></script>-->
 <script src="js_t/jquery-1.11.3.min.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -992,12 +996,15 @@
 <script src="js/custom.js"></script>
 <script src="js/particles.js"></script>
 <script>
+  /*
   window.onload = function() {
     Particles.init({selector: '.myheart-flotante'});
   };
+  */
   $(document).ready(function() {
-    /*$('#modalProm').modal('show');*/
+    $('#modalSep').modal('show');
   });
+  /*
   const slider = document.querySelector('.gallery');
   let isDown = false;
   let startX;
@@ -1025,9 +1032,11 @@
     const walk = (x - startX) * SCROLL_SPEED;
     slider.scrollLeft = scrollLeft - walk;
   });
+  */
 </script>
 <script>
   // Variables
+  /*
   const SEGUNDOS_ENTRE_SLIDERS = 12; // <---- IMPORTANT
   const CAROUSEL = document.querySelector(".carousel");
   const SLIDERS = CAROUSEL.querySelectorAll(".carousel__slider");
@@ -1065,6 +1074,7 @@
   }
   // Ejecuta
   autoPlay();
+  */
 </script>
 </body>
 </html>
