--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-body center-block align-items-center align-middle">
-        <video autoplay muted loop id="myVideo">
+        <video autoplay muted loop id="myVideo" style="margin-top: 150px;height: 500px;">
           <source src="./images/february/vid.mp4" type="video/mp4">
         </video>
         <!--
