--- a/index.html
+++ b/index.html
@@ -263,18 +263,20 @@
           <ol class='carousel-indicators'>
             <li data-target='#carouselExampleIndicators' data-slide-to='0' class='active'></li>
             <li data-target='#carouselExampleIndicators' data-slide-to='1'></li>
-            <li data-target='#carouselExampleIndicators' data-slide-to='2'></li>
+            <!--<li data-target='#carouselExampleIndicators' data-slide-to='2'></li>-->
           </ol>
           <div class='carousel-inner'>
-            <div class='carousel-item active'>
-              <img class='img-size' src='https://images.unsplash.com/photo-1485470733090-0aae1788d5af?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1391&q=80' alt='First slide' />
+            <div class='carousel-item active text-center'>
+              <img class='img-size' id="img-uno" src='./images/september/prom1_23.jpeg' alt='Promociones hoteles septiembre' />
             </div>
+            <div class='carousel-item text-center'>
+              <img class='img-size' id="img-dos" src='./images/september/prom2_23.jpeg' alt='Promociones hoteles septiembre' />
+            </div>
+            <!--
             <div class='carousel-item'>
-              <img class='img-size' src='https://images.unsplash.com/photo-1491555103944-7c647fd857e6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80' alt='Second slide' />
+              <img class='img-size' src='./images/' alt='Second slide' />
             </div>
-            <div class='carousel-item'>
-              <img class='img-size' src='https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80' alt='Second slide' />
-            </div>
+            -->
           </div>
           <a class='carousel-control-prev' href='#carouselExampleIndicators' role='button' data-slide='prev'>
             <span class='carousel-control-prev-icon' aria-hidden='true'></span>
@@ -942,8 +944,8 @@
 
 </div>
 <!-- Javascripts -->
-<!--<script src="js/jquery-2.1.4.min.js"></script>-->
-<script src="js_t/jquery-1.11.3.min.js"></script>
+<script src="js/jquery-2.1.4.min.js"></script>
+<!--<script src="js_t/jquery-1.11.3.min.js"></script>-->
 <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
