Listo! Cambios Septiembre

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 <!-- Modal especial event-->
 <!-- Usar este fragmento de codigo para mostrar promociones del mes || Cambiar la imagen-->
 <div class="modal fade" id="modalSep" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
+  <div class="modal-dialog modal-lg my-mod-d">
     <div class="modal-content my-mod-c">
       <div class="modal-body my-mod-b">
         <!-- carousel -->
