--- a/index.html
+++ b/index.html
@@ -272,11 +272,9 @@
             <div class='carousel-item text-center'>
               <img class='img-fluid' src='./images/september/prom2_23.jpeg' alt='Promociones hoteles septiembre' />
             </div>
-            <!--
             <div class='carousel-item'>
-              <img class='img-size' src='./images/' alt='Second slide' />
+              <img class='img-size' src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
             </div>
-            -->
           </div>
           <a class='carousel-control-prev' href='#carouselExampleIndicators' role='button' data-slide='prev'>
             <span class='carousel-control-prev-icon' aria-hidden='true'></span>
@@ -296,7 +294,7 @@
   </div>
 </div>
 <!-- Fin Modal Event-->
-<!-- Modal -->
+<!-- Modal Paquete Feb -->
 <div class="modal fade" id="modalHeart" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -304,21 +302,17 @@
         <video autoplay muted loop id="myVideo" style="margin-top: 150px;height: 500px;">
           <source src="./images/february/vid.mp4" type="video/mp4">
         </video>
-        <!--
-        <section class="carousel center-block align-items-center align-middle">
-          <div class="carousel__container">
-            <article class="carousel__slider carousel__slider--1">
-              <video autoplay muted loop id="myVideo">
-                <source src="./images/february/vid.mp4" type="video/mp4">
-              </video>
-            </article>
-            <article class="carousel__slider carousel__slider--2">
-            </article>
-            <article class="carousel__slider carousel__slider--3">
-            </article>
-          </div>
-        </section>
-        -->
+      </div>
+    </div>
+  </div>
+</div>
+<!------------>
+<!-- Modal -->
+<div class="modal fade" id="modalReserv" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-body center-block align-items-center align-middle">
+        <img class='img-size' src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
       </div>
     </div>
   </div>
