--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <ol class='carousel-indicators'>
             <li data-target='#carouselExampleIndicators' data-slide-to='0' class='active'></li>
             <li data-target='#carouselExampleIndicators' data-slide-to='1'></li>
-            <!--<li data-target='#carouselExampleIndicators' data-slide-to='2'></li>-->
+            <li data-target='#carouselExampleIndicators' data-slide-to='2'></li>
           </ol>
           <div class='carousel-inner'>
             <div class='carousel-item active text-center'>
@@ -272,8 +272,8 @@
             <div class='carousel-item text-center'>
               <img class='img-fluid' src='./images/september/prom2_23.jpeg' alt='Promociones hoteles septiembre' />
             </div>
-            <div class='carousel-item'>
-              <img class='img-size' src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+            <div class='carousel-item text-center'>
+              <img class='img-fluid' id="img-dos" src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
             </div>
           </div>
           <a class='carousel-control-prev' href='#carouselExampleIndicators' role='button' data-slide='prev'>
