--- a/index.html
+++ b/index.html
@@ -308,12 +308,17 @@
 </div>
 <!------------>
 <!-- Modal -->
-<div class="modal fade" id="modalReserv" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-body center-block align-items-center align-middle">
-        <img class='img-size' src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+<div class="modal fade" id="modalReserv" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+  <div class="modal-dialog my-mod-d my-mod-temp" style="margin-top: 200px;text-align: center;">
+    <div class="modal-content my-mod-c">
+      <div class="modal-body">
+        <!-- carousel -->
+              <img class='img-fluid' id="img-tres" src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
       </div>
+      <!--
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>-->
     </div>
   </div>
 </div>
@@ -446,6 +451,7 @@
         <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
         <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
         <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
+        <a type="button" data-toggle="modal" data-target="#modalReserv"  class="myReserv-flotante text-rsv">!</a>
       </div>
     </div>
     <!--
