Actualización de precios

--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
           <div class="feature-full-1col">
             <div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.jpeg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,087.87/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,087.87/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -521,7 +521,7 @@
           <div class="feature-full-1col" style="flex-direction: row-reverse">
             <div class="image" style="background-image: url(assets/webp/DELUXE_CAMA_QUEEN.jpeg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,221.76/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,221.76/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -535,7 +535,7 @@
           <div class="feature-full-1col">
             <div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.jpeg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,297.08/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,297.08/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -549,7 +549,7 @@
           <div class="feature-full-1col" style="flex-direction: row-reverse;">
             <div class="image" style="background-image: url(assets/webp/MASTER_SUITE.jpeg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,958.16/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,958.16/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -570,7 +570,7 @@
           <div class="feature-full-1col">
             <div class="image" style="background-image: url(./assets/webp/SUITE_CON_TINA_4.jpeg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,589.96/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,589.96/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -593,7 +593,7 @@
           <div class="feature-full-1col" style="flex-direction: row-reverse">
             <div class="image" style="background-image: url(assets/webp/SUITE_CON_JACUZZI_6.jpeg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,589.96/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,589.96/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -613,7 +613,7 @@
           <div class="feature-full-1col">
             <div class="image" style="background-image: url(./assets/webp/JR_SUITEHABITACION.jpg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,380.76/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,380.76/noche</span></p>
               </div>
             </div>
             <div class="desc">
@@ -633,7 +633,7 @@
           <div class="feature-full-1col" style="flex-direction: row-reverse;">
             <div class="image" style="background-image: url(./assets/webp/SCVISTA_1.jpg);">
               <div class="descrip text-center">
-                <p><small>Reserva por</small><span>$1,434.00/noche</span></p>
+                <p><small>Reserva desde</small><span>$1,434.00/noche</span></p>
               </div>
             </div>
             <div class="desc">
