--- a/rooms.html
+++ b/rooms.html
@@ -41,6 +41,8 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
     <link rel="stylesheet" href="css/t-style.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/slider.css">
+
     <!--------------------------------->
     <script src="js/modernizr-2.6.2.min.js"></script>
     <style>
@@ -213,6 +215,31 @@
         </div>
     </div>
 </div>
+
+
+<!-- Modal Paquete Feb -->
+<div class="modal fade" id="modalHeart" tabindex="-1" aria-labelledby="modalLabelHeart" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body center-block align-items-center align-middle">
+                <video autoplay muted loop id="myVideo" style="margin-top: 150px;height: 500px;">
+                    <source src="./images/february/vid.mp4" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="modalReserv" tabindex="-1" aria-labelledby="modalLabelReserv" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body center-block align-items-center align-middle">
+                <img class='img-fluid' src='./images/september/reserva.jpeg' alt='Beneficios de reserva Hoteles Punto MX' />
+            </div>
+        </div>
+    </div>
+</div>
+<!------------>
 <!------------>
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
@@ -264,8 +291,10 @@
         </div>
         <div class="container" style="z-index:10!important;background-color: var(--bg-hover)!important;">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
+                <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
+                <a type="button" data-toggle="modal" data-target="#modalReserv"  class="myReserv-flotante"></a>
             </div>
         </div>
         <div class="tm-page-wrap mx-auto" style="margin-top: 30px;">
@@ -621,6 +650,9 @@
             slidesToShow: 1,
             slidesToScroll: 1
         });
+    });
+    $(document).ready(function() {
+        $('#modalReserv').modal('show');
     });
 </script>
 </body>
