--- a/rooms.html
+++ b/rooms.html
@@ -294,7 +294,7 @@
                 <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
                 <a type="button" data-toggle="modal" data-target="#modalHeart"  class="myheart-flotante text-rsv"><i class="fa fa-heart"></i></a>
-                <a type="button" data-toggle="modal" data-target="#modalReserv"  class="myReserv-flotante"></a>
+                <!--<a type="button" data-toggle="modal" data-target="#modalReserv"  class="myReserv-flotante"></a>-->
             </div>
         </div>
         <div class="tm-page-wrap mx-auto" style="margin-top: 30px;">
